feat(task): add task endpoints
